Revision history for Perl extension AnyEvent.

	- don't generate spurious readyness notifications when select
          returns EINTR in the pure perl backend (analysed and testcase
          by Bas Denissen).

5.251 Sat Mar 13 00:58:21 CET 2010
        - make test failed if it was run before make install on perl <=
          5.8.8, and older versions of perl make our live very difficult,
          so write constants.pl during Makefile.PL time.

5.25  Sat Mar 13 00:23:14 CET 2010
	- fix a race condition in AnyEvent::Handle that would cause
          a "bio_read: unsupported method" error (in _another_
          ssl connection) after user code threw an exception.
        - added AnyEvent::Handle->destroyed method.
	- speed up AnyEvent::Socket::format_address and ::format_ipv6.
        - the AnyEvent::Util::fh_nonblocking function worked only
          by lucky accident on win32.
        - smaller and faster AnyEvent::Util::fh_nonblocking.
        - when the (required!) Time::HiRes module is missing, AnyEvent
          did not fall back to built-in time properly.
        - do not load Fcntl at runtime, saving memory and loading time.
        - precompile a number of constants and use them instead of runtime
          detection and eval.
        - free detection code after detection and similar memory optimisations.
        - Perl backend timer interval best effort drift has been improved
          (same algorithm as EV).
        - update unicode idna mapping table.

5.24  Tue Jan  5 11:39:43 CET 2010
	- cygwin never reports errors from failed connects. 1.5 just gives
          you continous readyness and EAGAIN, 1.7 is even more broken and
          just hangs. work around both issues in a cygwin-specific hack.
	- improve idle watcher documentation slightly.

5.23  Sun Dec 20 23:48:00 CET 2009
	- support IDNs in resolve_sockaddr, and therefore in tcp_connect.
        - implement punycode_encode/decode, idn_nameprep,