@@ -3,6 +3,14 @@ Revision history for Perl extension AnyEvent.
 	- don't generate spurious readyness notifications when select
           returns EINTR in the pure perl backend (analysed and testcase
           by Bas Denissen).
+        - provider faster implementations for AE::time/now/now_update for
+          EV and Perl backends.
+        - provide faster AE::cv and AE::time implementations for all
+          backends.
+        - no longer support lower/mixed-case signal names (this was
+          never documented nor universally supported).
+        - some more memory µ-optimisations, and somewhat less messy
+          code to cope with both AnyEvent and AE APIs.
 
 5.251 Sat Mar 13 00:58:21 CET 2010
         - make test failed if it was run before make install on perl <=
@@ -412,7 +420,7 @@ Revision history for Perl extension AnyEvent.
           unless one has been installed already.
         - warn about not loaidng AnyEvent::Impl::POE early enough
           (patch by Adam Rosenstein).
-	- fixed a great number of bugs and corner cases in AnyEvent::Handle:
+	- fixed a great number of bugs and corner cases in AnyEvent::Handle.
         - fix a bug in where in SSL connect mode, the
           client would first wait for some data by the server and
           otherwise hang. (reported and analysed in an absolutely
